--- a/src/config.yml
+++ b/src/config.yml
@@ -5,12 +5,16 @@ duralki:
   # How much durability will transfer per tick?
   transferrate: 20
   # Sounds - self explanatory.
-  break-sound: ENTITY_ITEM_BREAK
-  transfer-sound: BLOCK_AMETHYST_BLOCK_CHIME
+  break-sound: "miecraft:entity.item.break"
+  transfer-sound: "minecraft:block.amethyst_block.chime"
+  replace-sound: "minecraft:block.end_portal_frame.fill"
   # Blacklist of items that will not be drillable (Minecraft and CraftEngine Item IDs).
   blacklisted-tools: [
     "neom:gauntlet"
   ]
+  replace-tools:
+    "neom:gauntlet": "minecraft:diamond_pickaxe"
+
 
 # The Gauntlet configs.
 gauntlet:
@@ -37,3 +41,17 @@ gauntlet:
     - "minecraft:granite"
     - "minecraft:diorite"
     - "minecraft:andesite"
+
+# The Biom changer configs.
+biomchanger:
+  # First the CraftEngine Item ID second the biom id.
+  items:
+    "custom:item": "minecraft:jungle"
+    "custom:item2": "minecraft:jungle"
+  # Radius of the biom change.
+  radius: 15
+  # Should the items be removed from the inventory?
+  removeItems: true
+  # List of players that can use the biom changer.
+  players:
+    - "bfd59ae0-c905-4f3b-903a-3ce8510d6b71"
